app/assets/stylesheets/campaigns.css
/* ... */
@media
only screen and (max-width: 560px) {

    .payment-div {
        margin: 0px 20px 20px 20px;
        height: 64px;
    }

    tr, td {
        display: block;
        border: 1px solid #dddddd;
    }

    thead tr {
        position: absolute;
        top: -9999px;
        left: -9999px;
    }

    .performance_table th:nth-child(1), .performance_table td:nth-child(1), .engagement_table th:nth-child(1), .engagement_table td:nth-child(1) {
        text-align: center ;
        width: auto;
    }

    .btn-export {
        font-size: 10px;
        color: white;
        margin: 15px 3px 3px 5px;
        padding: 5px 12px 5px 12px;
    }

    .btn-age {
        font-size: 10px;
        margin: 10px 3px 3px 5px;
        padding: 5px 22px 5px 9px;
    }

    .btn-country {
        font-size: 10px;
        margin: 10px 3px 3px 5px;
        padding: 5px 6px 5px 5px;
    }

    .angle-down-country {
        padding-left: 10%;

    }

    .pepsi-img-none {
        padding-left: 0px;
    }

    .performance_table > tbody > tr > td:nth-of-type(2):before { content: "Campaign Name : "; font-weight: bold; }
    .performance_table > tbody > tr > td:nth-of-type(3):before { content: "Post Likes : ";  font-weight: bold; }
    .performance_table > tbody > tr > td:nth-of-type(4):before { content: "Reach : ";  font-weight: bold; }
    .performance_table > tbody > tr > td:nth-of-type(5):before { content: "Starts: ";  font-weight: bold; }
    .performance_table > tbody > tr > td:nth-of-type(6):before { content: "Ends: ";  font-weight: bold; }

    .engagement_table > tbody > tr > td:nth-of-type(2):before { content: "Campaign Name : "; font-weight: bold; }
    .engagement_table > tbody > tr > td:nth-of-type(3):before { content: "Likes : ";  font-weight: bold; }
    .engagement_table > tbody > tr > td:nth-of-type(4):before { content: "Comments : ";  font-weight: bold; }
    .engagement_table > tbody > tr > td:nth-of-type(5):before { content: "Shares: ";  font-weight: bold; }

    .brand_campaign_performance_table > tbody > tr > td:nth-of-type(1):before { content: "Campaign Name : "; font-weight: bold; }
    .brand_campaign_performance_table > tbody > tr > td:nth-of-type(2):before { content: "Post Likes : ";  font-weight: bold; }
    .brand_campaign_performance_table > tbody > tr > td:nth-of-type(3):before { content: "Reach : ";  font-weight: bold; }

    .brand_campaign_engagement_table > tbody > tr > td:nth-of-type(1):before { content: "Campaign Name : "; font-weight: bold; }
    .brand_campaign_engagement_table > tbody > tr > td:nth-of-type(2):before { content: "Likes : ";  font-weight: bold; }
    .brand_campaign_engagement_table > tbody > tr > td:nth-of-type(3):before { content: "Comments : ";  font-weight: bold; }
    .brand_campaign_engagement_table > tbody > tr > td:nth-of-type(4):before { content: "Shares: ";  font-weight: bold; }
}

.campaign-content {
    min-height: 250px;
    padding: 15px 20px;
}

.campaign-create-wrapper {
    margin: 20px;
    background-color: rgba(255, 255, 255, 1);
    -webkit-box-shadow: 0 0 2px #999999;
    -moz-box-shadow: 0 0 2px #999999;
    box-shadow: 0 0 2px #999999;
    padding: 25px;
}

.campaign-influencer-picture {
    border-radius: 50%;
    border: 4px solid #cdcdcd;
    display: inline-block;
    margin-left: 15px ;
    width: 100px;
    height: 100px;
}

.influencer-description {
    display: inline-block;
    padding-left: 20px;
    vertical-align: middle;
}

.campaign-create-wrapper .influencer-address {
    font-size: 12px;
}

.btn-message{
    background-color: #f8c102;
    margin-top: 17%;
    width: 138px;
    height: 38px;
    display: block;
    color: #FFFFFF;
}

.influencer-title {
    font-size: 13px;
}

.influencer-profile-info{
    padding: 28px 75px 34px 15px;
    width: 100%;
}

.social-account-tab-content {
    border: 1px solid #ddd ;
    border-top: none;
    padding-top: 35px;
    padding-right: 30px;
    padding-bottom: 20px;
    margin-bottom: 20px;
    overflow: hidden;
}

.social-account-tabs .social-account-nav-tabs a {
    color: #696969;
}

.social-account-tabs .social-account-nav-tabs li.active .social-account-fa-edit {
    color: #3c8dbc;
}

.social-account-fa-edit {
    font-size: 1.5em;
    padding-right: 5px;
}

.social-account-tab-content label {
    padding-right: 10px;
}

.social-account-tab-content input:not([type=radio]), .social-account-tab-content select {
    width: 52%;
    display: inline;
    margin: 5px;
}

.text-pink   {
    font-size: 13px;
    color: #ff305a;
    font-weight: 600;
    padding: 20px 15px;
}

.text-headline-form, .payment-form {
    padding-left: 15px;
    padding-top: 10px;
}

.text-headline-form input, .text-headline-form textarea {
    width: 66%;
    margin-bottom: 10px;
    padding: 5px;
}

.campaign-form-input {
    margin-bottom: 15px;
}

.text-headline-form textarea {
    resize: none;
}

.type-of-post {
    background-color: #ffffff;
    padding: 3px;
}

.payment-form select {
    background-color: #ffffff;
    padding: 5px;
    margin: 2px 0 22px 0;
    width: 108px;
}

.payment-form input {
    margin: 2px 0 22px 0;
    padding: 5px;

}

.payment-form .card-number {
    width: 220px;
}

.payment-form .card-holder-name {
    width: 270px;
}

.campaign-create-wrapper .btn-book-now {
    background-color: #e13f3c;
    color: white;
    margin-top: 5%;
    margin-right: 20px;
    padding: 8px 28px;
    font-weight: 600;
}

.campaign-create-wrapper .btn-book-now:focus {
    outline: thick dotted;
}

.campaign-create-wrapper .grey-color {
    background-color: #999999;
}

#error_explanation {
   margin-left: 15px;
}

@media (max-width: 850px) {

    #error_explanation {
        margin-left: 0;
    }

    #error_explanation {
        width: 100%;
    }
}

.campaign-date {
    width: 320px;
    background-color: #dbd9da;
    padding: 10px 20px;
    margin-top: 20px;
    margin-left: calc(30% + 9px)
}

.social-account-tab-content  input#campaign_cost{
    width: 150px;
}
/* ... */

